# rouston

./: .gitmodules  CMakeLists.txt  README.md
assets/: load.jvcc
release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake
release/.cmake/api/v1/reply/: cache-v2-7a336e3b863381668f0a.json  cmakeFiles-v1-2d43c14f3c4f07678b05.json  codemodel-v2-4b849616f616f0eaa8b4.json  directory-src.ext.cglm-Release-858a44a433e408100b86.json  directory-src.ext.glfw-Release-562c630a08d4e238cdcd.json  index-2024-04-14T03-58-56-0589.json  target-cglm-Release-443ff100b2603bf0933c.json  target-demo-Release-3bc7fbc8eaf1d3d3ff9f.json  target-glfw-Release-8c7e8a3e56eb4493db8c.json  target-uninstall-Release-946cf837fd26184ad3d8.json  target-update_mappings-Release-9a206f839b3064cf613a.json
release/src/ext/cglm/: cglmConfig.cmake  cmake_install.cmake
release/src/ext/glfw/: cmake_install.cmake  cmake_uninstall.cmake
release/src/ext/glfw/docs/: cmake_install.cmake
release/src/ext/glfw/src/: cmake_install.cmake
src/: asset_manager.c  gfx.c  gutils.c  jvcc.c  main.c  state.c  utils.c  window.c
src/inc/: asset_manager.h  gfx.h  gutils.h  inc.h  jvcc.h  shaders.h  state.h  utils.h  window.h
v1/: CMakeLists.txt
v1/src/: gfx.c  gutils.c  main.c  state.c  window.c
v1/src/ext/: impl.c
v1/src/ext/glad/include/glad/: glad.h
v1/src/ext/glad/src/: glad.c
v1/src/ext/glfw/: CMakeLists.txt
v1/src/ext/glfw/docs/: intro.md
v1/src/inc/: gfx.h  gutils.h  state.h  window.h
